[gd_scene format=3 uid="uid://b3t1x117hl7aq"]

[ext_resource type="Script" uid="uid://dt1xotr6xa33v" path="res://Scripts/Objects/GoalRoulette.gd" id="1_uj3xr"]
[ext_resource type="Texture2D" uid="uid://cuf02wueu6agx" path="res://Sprites/Objects/GoalRoulette.png" id="2_p1ysf"]
[ext_resource type="Texture2D" uid="uid://dumae3lfxfbp2" path="res://Sprites/Effects/Sparkle.png" id="3_7cqum"]
[ext_resource type="Texture2D" uid="uid://122qcgmccghy" path="res://Sprites/Effects/GoalFireworks.png" id="4_eek06"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7cqum"]
atlas = ExtResource("2_p1ysf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eek06"]
atlas = ExtResource("2_p1ysf")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4li6"]
atlas = ExtResource("2_p1ysf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bceis"]
atlas = ExtResource("2_p1ysf")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wa37"]
atlas = ExtResource("2_p1ysf")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks3od"]
atlas = ExtResource("2_p1ysf")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04e1v"]
atlas = ExtResource("2_p1ysf")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08fq1"]
atlas = ExtResource("2_p1ysf")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jll7i"]
atlas = ExtResource("2_p1ysf")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_brgjg"]
atlas = ExtResource("2_p1ysf")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvqby"]
atlas = ExtResource("2_p1ysf")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnnba"]
atlas = ExtResource("2_p1ysf")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkjke"]
atlas = ExtResource("2_p1ysf")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnrij"]
atlas = ExtResource("2_p1ysf")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w7mc"]
atlas = ExtResource("2_p1ysf")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qayds"]
atlas = ExtResource("2_p1ysf")
region = Rect2(0, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qenr7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eek06")
}],
"loop": true,
"name": &"FireFlower",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4li6")
}],
"loop": true,
"name": &"Mushroom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bceis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wa37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks3od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04e1v")
}],
"loop": true,
"name": &"SpinFireFlower",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08fq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jll7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brgjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvqby")
}],
"loop": true,
"name": &"SpinMushroom",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnnba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkjke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnrij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w7mc")
}],
"loop": true,
"name": &"SpinStar",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qayds")
}],
"loop": true,
"name": &"Star",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvy4k"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvy4k"]
atlas = ExtResource("3_7cqum")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qenr7"]
atlas = ExtResource("3_7cqum")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vxqcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvy4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qenr7")
}],
"loop": false,
"name": &"sparkle",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_45e53"]
atlas = ExtResource("4_eek06")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_adqx4"]
atlas = ExtResource("4_eek06")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx3yf"]
atlas = ExtResource("4_eek06")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swhlc"]
atlas = ExtResource("4_eek06")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivo78"]
atlas = ExtResource("4_eek06")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk3wx"]
atlas = ExtResource("4_eek06")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf2c8"]
atlas = ExtResource("4_eek06")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ky5"]
atlas = ExtResource("4_eek06")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4fkk"]
atlas = ExtResource("4_eek06")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahq1q"]
atlas = ExtResource("4_eek06")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv33x"]
atlas = ExtResource("4_eek06")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uknmd"]
atlas = ExtResource("4_eek06")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms2xf"]
atlas = ExtResource("4_eek06")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtjv4"]
atlas = ExtResource("4_eek06")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhqjh"]
atlas = ExtResource("4_eek06")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8026b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45e53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adqx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx3yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swhlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivo78")
}],
"loop": false,
"name": &"FireFlower",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk3wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ky5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4fkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahq1q")
}],
"loop": true,
"name": &"Mushroom",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv33x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uknmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms2xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtjv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhqjh")
}],
"loop": true,
"name": &"Star",
"speed": 8.0
}]

[node name="GoalRoulette" type="Node2D" unique_id=882525322]
script = ExtResource("1_uj3xr")

[node name="GoalBackground" type="Sprite2D" parent="." unique_id=1888685391]
texture = SubResource("AtlasTexture_7cqum")

[node name="ItemRoulette" type="AnimatedSprite2D" parent="." unique_id=747106537]
sprite_frames = SubResource("SpriteFrames_qenr7")
animation = &"SpinFireFlower"
frame_progress = 0.9086632

[node name="DetectionArea" type="Area2D" parent="." unique_id=330537268]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" unique_id=650042508]
shape = SubResource("RectangleShape2D_nvy4k")

[node name="Sparkle" type="AnimatedSprite2D" parent="." unique_id=1569891817]
visible = false
sprite_frames = SubResource("SpriteFrames_vxqcb")
animation = &"sparkle"
frame = 1
frame_progress = 0.8425843

[node name="Firework" type="AnimatedSprite2D" parent="." unique_id=1708017557]
visible = false
sprite_frames = SubResource("SpriteFrames_8026b")
animation = &"FireFlower"
